# RustFile

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
code/: logo.rs  main.rs
doc/: 1_dev.md  1_product_manage.md  git_usage_guide.md  project_name_ideas.md  project_name_ideas_cool.md  rust_terminal_libraries.md  优化该项目架构文档.md  发布到包管理器指南.md  对话记录.md  自动化构建脚本使用文档.md
scripts/: build.py
src/: logo.rs  main.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/core/: file_ops.rs  mod.rs  models.rs
src/display/: formatter.rs  mod.rs  styles.rs
tests/: cli_tests.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
